k8s/service-2.yml
# service-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: ghcr.io/chrisserverless/hellocontainers:main@sha256:406fe93a545da2386abebcd8fde55f7fc5e0167981636e230bb7abb2104a0a17
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: registry-dockerhub-config
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service2
  type: ClusterIP
