k8s/ingress.yml
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pik8s-load-balanced
  labels:
    app: pik8s-load-balanced
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  rules:
  - host: "api.mysite.net"
    http:
      paths:
      - pathType: Prefix
        path: "/" backend:
          service:
            name: service1
            port:
            number: 80
   - host: "api.myothersite.net/service2"
     http:
     paths:
     - pathType: Prefix
         path: "/"
         backend:
         service:
            name: service2
            port:
            number: 80
   - host: "api.myothersite.net/service3"
     http:
     paths:
     - pathType: Prefix
         path: "/"
         backend:
         service:
            name: service3
            port:
            number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: pik8s-load-balanced
  type: LoadBalancer
  #loadBalancerIP: <<LOAD BALANCER IP HERE>>
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
